--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ pytest==6.2.2
 tensorflow-federated==0.18.0
 jupyter==1.0.0
 tqdm==4.59.0
+torch==1.8.0+cpu
+torchaudio==0.8.0
+torchvision==0.9.0+cpu
+scikit-learn==0.24.1
+
